--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -923,7 +923,7 @@ a {
       overflow: hidden;
       margin-top: 68px;
       max-height: auto;
-      padding: 35px 0 0 0; }
+      padding: 45px 0 0 0; }
       .hero .col-6 {
         width: 100%; }
       .hero .col-8 {
